# fpc-compression

./: .gitignore  Cargo.toml
benches/: compression.rs  decompression.rs
src/: lib.rs
