[package]
name = "fpc-compression"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "decompression"
harness = false